yamls/cilium/policy-namespace/base-policy/allow-kubeopt.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "i-ck"
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: logging
      app: ck
  ingress:
  - fromEndpoints:
    - matchLables:
        k8s:io.kubernetes.pod.namespace: default
        app: kubeopt
